force-app/main/default/objects/Session__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date and time of the session. Used with Session_Date__c to detect overlapping speaker bookings.</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>