force-app/main/default/objects/Session__c/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <label>Session Date</label>
    <description>Start date and time of the session. Required to enable accurate double-booking detection.</description>
    <required>true</required>
    <type>DateTime</type>
</CustomField>