force-app/main/default/objects/Session__c/fields/Speaker_Count__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Count__c</fullName>
    <description>Roll-up summary counting the number of Session_Speaker__c junction records. Used by the No_Speakers_On_Cancelled validation rule.</description>
    <label>Speaker Count</label>
    <summaryForeignKey>Session_Speaker__c.Session__c</summaryForeignKey>
    <summaryOperation>COUNT</summaryOperation>
    <type>Summary</type>
</CustomField>